# irrigation-design-v2

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  railway.toml  tsconfig.json  vercel.json
.github/workflows/: ml-retrain.yml
docs/: MOBILE_QA.md
ml/: Dockerfile  README.md  pyproject.toml
ml/placement_ml/: __init__.py  dataset.py  evaluate.py  features.py  labels.py  metrics.py  model_v1.py  model_v2.py  placement_labels.py  train.py
ml/scripts/: export_and_train.sh  start.sh
ml/serve/: app.py  schemas.py
prisma/: schema.prisma  seed.ts
prisma/seed-data/: catalog-items.json
prisma/seed-data/catalog/: adjustability.ts  build-catalog.ts  chart.ts  consolidate-spray-nozzles.ts  heads.ts  nozzles-manufacturer.ts  rainbird-spray-nozzles.ts  strip-nozzle-helpers.ts
public/: manifest.webmanifest  sw.js
scripts/: export-training-jsonl.mjs  extract-catalog-pdfs.mjs  extract-pdf-text.mjs  make-favicon.js  ml-check-promotion.mjs  ml-count-training-examples.mjs  ml-deploy-checkpoint.mjs  ml-register-model.mjs  parse-hunter-charts.mjs  tmp-extract-pdf.mjs  vercel-build.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(training)/: layout.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/auth/: AuthShell.tsx  LoginForm.tsx  RegisterForm.tsx
src/components/design/: DesignCanvas.tsx  DesignHeadEditorPanel.tsx  DesignToolbar.tsx  DesignWorkspace.tsx  (+6 more)
src/lib/: auth.config.ts  auth.ts  utils.ts
(+167 files in other folders)
